--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-	"name": "socketio-chat",
-	"version": "0.1.0",
-	"description": "A node js chat app",
-	"main": "index.js",
-	"scripts": {
-		"start": "node index.js"
-	},
-	"dependencies": {
-		"express": "^4.12.4",
-		"socket.io": "*"
-	},
-	"keywords": [
-		"node",
-		"express",
-		"chat"
-	],
-	"license": "MIT"
+  "name": "TasisChat",
+  "version": "0.0.1",
+  "description": "A node js chat app",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
+  "dependencies": {
+    "express": "^4.12.4",
+    "socket.io": "*"
+  },
+  "keywords": [
+    "node",
+    "express",
+    "chat"
+  ],
+  "license": "Apache-2.0"
 }
