--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "TasisChat",
   "version": "0.0.1",
-  "description": "A node js chat app",
+  "description": "A simple chat program",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
