Rewound to commit 6cedc65a0571cc45991885c1757eb5e9a9faae64 + 0 edits

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "TasisChat",
   "version": "0.0.1",
-  "description": "A simple chat program",
+  "description": "A node js chat app",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
