Rewound to commit afcf626782d856d5ead274ebd0737eb7eef77013 + 0 edits

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A node js chat app made by Jackson McDowell and Samy El Moutia",
   "main": "index.js",
   "scripts": {
-    "start": "node main.js"
+    "start": "node index.js"
   },
   "dependencies": {
     "express": "^4.12.4",
